Added affiliate links + Minor updates

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Beanos | Developer</title>
+	<title>[ Beanos.DEV ]</title>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
 </head>
 <body>
-	<!-- Scrollable container for the content -->
 	<div id="scroll-container">
 		<div id="main-card" class="card-default-style">
 			<div id="name-tag">
@@ -32,11 +31,11 @@
 			<h2>Check out my website!</h2>
 			<p>Here are a couple pages I recommend for you to check out!</p>
 			<ul>
-				<li><a href="https://beanos.dev/recommended-services" target="_blank">Recommended services</a></li>
+				<li><a href="/recommended-services" target="_blank">Recommended services</a></li>
+				<li><a href="/affiliate-links" target="_blank">Affiliate links</a></li>
 			</ul>
 		</div>
 
-		<!-- New div beneath with its own styling -->
 		<div class="new-card card-default-style links">
 			<h2>My GitHub!</h2>
 			<p>Listed below are a couple of GitHub projects from my page!</p>
